// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioInput /> should render the correct markup 1`] = `
<input
  aria-checked={false}
  aria-labelledby="genrerocklabel"
  checked={false}
  className="ljZyWa"
  disabled={true}
  id="genrerockinput"
  name="genre"
  onClick={null}
  size="small"
  type="radio"
  value="rock"
/>
`;

exports[`<RadioInput /> should render the correct markup when additional props are passed 1`] = `
<input
  aria-checked={false}
  aria-labelledby="genrerocklabel"
  checked={false}
  className="input--radio-button ljZyWa"
  disabled={true}
  id="genrerockinput"
  name="genre"
  onClick={null}
  size="small"
  type="radio"
  value="rock"
/>
`;

exports[`<RadioInput /> should render the correct markup when the checked prop equals true 1`] = `
<input
  aria-checked={true}
  aria-labelledby="genrerocklabel"
  checked={true}
  className="ljZyWa"
  disabled={true}
  id="genrerockinput"
  name="genre"
  onClick={null}
  size="small"
  type="radio"
  value="rock"
/>
`;

exports[`<RadioInput /> should render the correct markup when the disabled prop equals true 1`] = `
<input
  aria-checked={false}
  aria-labelledby="genrerocklabel"
  checked={false}
  className="ljZyWa"
  disabled={true}
  id="genrerockinput"
  name="genre"
  onClick={null}
  size="small"
  type="radio"
  value="rock"
/>
`;

exports[`<RadioInput /> should render the correct markup when the isActive prop equals true 1`] = `
<input
  aria-checked={false}
  aria-labelledby="genrerocklabel"
  checked={false}
  className="ljZyWa"
  disabled={false}
  id="genrerockinput"
  name="genre"
  onClick={null}
  size="small"
  type="radio"
  value="rock"
/>
`;

exports[`<RadioInput /> should render the correct markup when the isFocused prop equals true 1`] = `
<input
  aria-checked={false}
  aria-labelledby="genrerocklabel"
  checked={false}
  className="ljZyWa"
  disabled={true}
  id="genrerockinput"
  name="genre"
  onClick={null}
  size="small"
  type="radio"
  value="rock"
/>
`;

exports[`<RadioInput /> should render the correct markup when the size prop equals large 1`] = `
<input
  aria-checked={false}
  aria-labelledby="genrerocklabel"
  checked={false}
  className="ljZyWa"
  disabled={true}
  id="genrerockinput"
  name="genre"
  onClick={null}
  size="large"
  type="radio"
  value="rock"
/>
`;
